--- a/apps/maplibre-sandbox/shared/main.scss
+++ b/apps/maplibre-sandbox/shared/main.scss
@@ -8,15 +8,61 @@ body,
     height: 100%;
 }
 
-.sidebar {
-    background-color: rgba(35, 55, 75, 0.9);
-    color: #fff;
-    padding: 6px 12px;
-    font-family: monospace;
-    z-index: 1;
+.map-overlay {
+    font: 12px/20px 'Helvetica Neue', Arial, Helvetica, sans-serif;
     position: absolute;
+    min-width: 200px;
     top: 0;
     left: 0;
+    padding: 10px;
     margin: 12px;
-    border-radius: 4px;
+    z-index: 1;
+
+    .map-overlay-inner {
+        background-color: #fff;
+        box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+        border-radius: 3px;
+        padding: 10px;
+        margin-bottom: 10px;
+    }
+
+    fieldset {
+        border: none;
+        padding: 0;
+        margin: 0 0 10px;
+
+        &:last-child {
+            margin: 0;
+        }
+    }
+
+    select {
+        width: 100%;
+    }
+
+    label {
+        display: block;
+        font-weight: bold;
+        margin: 0 0 5px;
+    }
+
+    .block {
+        display: block;
+    }
+
+    button.color {
+        display: inline-block;
+        width: 36px;
+        height: 20px;
+        border: none;
+        cursor: pointer;
+
+        &:focus {
+            outline: none;
+        }
+
+        &:hover {
+            box-shadow: inset 0 0 0 3px rgba(0, 0, 0, 0.1);
+        }
+    }
 }
