--- a/extra/maplibre-ext/src/LLMarker.scss
+++ b/extra/maplibre-ext/src/LLMarker.scss
@@ -1,4 +1,5 @@
 .ll-marker {
+    background-color: pink;
     --marker-size: 50px;
     --marker-height: var(--marker-size);
     --marker-width: calc(var(--marker-size) * 0.7);
