--- a/extra/maplibre-ext/src/LLPopup.scss
+++ b/extra/maplibre-ext/src/LLPopup.scss
@@ -1,22 +1,18 @@
-.maplibregl-popup.ll-dialog {
+.ll-popup.ll-dialog {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: max-content;
+    min-width: 150px;
+    will-change: transform;
 
-    .maplibregl-popup-tip {
-        z-index: 3;
-    }
+    &.unselectable {
+        pointer-events: none;
+        user-select: none;
 
-    &.maplibregl-popup-anchor-top-left .box {
-        border-top-left-radius: 0;
-    }
-
-    &.maplibregl-popup-anchor-bottom-left .box {
-        border-bottom-left-radius: 0;
-    }
-
-    &.maplibregl-popup-anchor-top-right .box {
-        border-top-right-radius: 0;
-    }
-
-    &.maplibregl-popup-anchor-bottom-right .box {
-        border-bottom-right-radius: 0;
+        .box {
+            pointer-events: none;
+            user-select: none;
+        }
     }
 }
