--- a/extra/shared/styles/themes/_light.scss
+++ b/extra/shared/styles/themes/_light.scss
@@ -1,10 +1,10 @@
 :root,
 .ui-light {
     --text-strong: #000000;
-    --text-default: #161616;
-    --text-weak: #4d4d4d;
-    --text-hint: #666666;
-    --text-disabled: #767676;
+    --text-default: #444444;
+    --text-weak: #5c5c5c;
+    --text-hint: #767676;
+    --text-disabled: #9a9a9a;
     --text-invert: #ffffff;
 
     --background-default: #ffffff;
