--- a/extra/shared/components/button/Button.scss
+++ b/extra/shared/components/button/Button.scss
@@ -1,7 +1,7 @@
 .ll-button {
     display: inline-block;
     border-radius: var(--border-radius-md);
-    border: 1px solid var(--button-default-border-color, transparent);
+    border: 0;
     outline: none;
     cursor: pointer;
     background-color: var(--button-default-background-color);
@@ -23,9 +23,6 @@
         }
 
         &:focus {
-            border-color: var(--button-focus-border-color);
-            z-index: 2;
-
             &.shape-solid {
                 box-shadow: var(--shadow-md);
             }
@@ -38,14 +35,12 @@
             &.shape-solid {
                 box-shadow: var(--shadow-md);
             }
-
         }
 
         &:active,
         &.selected {
             box-shadow: var(--shadow-light-md);
             background-color: var(--button-active-background-color);
-            z-index: 1;
 
             &.shape-solid {
                 box-shadow: var(--shadow-lg);
@@ -75,7 +70,6 @@
        same style as <a> tag
     */
     &.shape-underline {
-        border: 0;
         box-shadow: inset 0 -2px 0 var(--button-default-border-color);
         border-radius: 0;
         transition: box-shadow .05s ease, color .05s ease;
@@ -87,6 +81,10 @@
 
     &.shape-solid {
         box-shadow: var(--shadow);
+    }
+
+    &.shape-outline {
+        outline: 1px solid var(--button-focus-visible-border-color);
     }
 
     &:focus-visible {
