--- a/extra/shared/styles/base/_typography.scss
+++ b/extra/shared/styles/base/_typography.scss
@@ -5,7 +5,7 @@ html {
 body {
     font-size: pixel-to-rem($base-font-size);
     line-height: 1.5;
-    font-family: 'sans-serif';
+    font-family: ui-sans-serif, system-ui, sans-serif;
     color: var(--text-default);
 }
 
@@ -49,16 +49,16 @@ $size in $text-sizes {
 
 a {
     color: var(--text-strong);
-    box-shadow: inset 0 -2px 0 var(--color-primary-300);
     transition: box-shadow .05s ease, color .05s ease;
+
+    box-shadow: 0 1px 0 var(--text-strong);
 
     &:visited {
         color: var(--text-strong);
     }
 
     &:hover {
-        color: var(--color-primary-1000);
-        box-shadow: inset 0 -2px 0 var(--color-primary-500);
+        box-shadow: 0 2px 0 var(--color-primary-500);
     }
 
     &:focus-visible {
@@ -67,7 +67,7 @@ a {
     }
 
     &:active {
-        color: var(--text-weak);
+        color: var(--color-primary-1000);
     }
 }
 
@@ -80,7 +80,6 @@ a.ghost {
     &:hover {
         text-decoration: none;
         box-shadow: none;
-
     }
 }
 
