--- a/extra/shared/styles/base/_animation.scss
+++ b/extra/shared/styles/base/_animation.scss
@@ -14,3 +14,52 @@
         transform: translateY(0);
     }
 }
+
+@keyframes fade-in {
+    0% {
+        transform: scale(.8);
+        opacity: 0;
+    }
+
+    100% {
+        transform: scale(1);
+        opacity: 1;
+    }
+}
+
+@keyframes fade-out {
+    0% {
+        transform: scale(1);
+        opacity: 1;
+    }
+
+    100% {
+        transform: scale(.8);
+        opacity: 0;
+    }
+}
+
+.ll-animate {
+
+    &.fade-in {
+        animation: fade-in 250ms ease both;
+    }
+
+    &.fade-out {
+        animation: fade-out 250ms ease both;
+    }
+}
+
+.ll-fade-transition {
+
+    &.transition-status-initial,
+    &.transition-status-close {
+        opacity: 0;
+        transform: scale(.9);
+    }
+
+    &.transition-status-open,
+    &.transition-status-close {
+        transition: opacity 250ms ease, transform 250ms ease !important;
+    }
+}
