--- a/extra/shared/components/input/Input.scss
+++ b/extra/shared/components/input/Input.scss
@@ -11,7 +11,8 @@
         outline-color: var(--color-weak-400);
     }
 
-    &:focus-within {
+    &:focus-within,
+    &.focus {
         box-shadow: var(--ring-shadow-light);
         outline-color: var(--color-primary-600);
         outline-width: 2px;
