front implemetation double validation client/server

--- a/extra/shared/styles/base/_layout.scss
+++ b/extra/shared/styles/base/_layout.scss
@@ -3,3 +3,9 @@
     grid-template-columns: 1fr 1fr;
     gap: var(--space);
 }
+
+.blocks-container {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: var(--space);
+}
