--- a/apps/front/src/routes/admin/_base.scss
+++ b/apps/front/src/routes/admin/_base.scss
@@ -16,4 +16,28 @@ body {
   border-right: solid 1px #e3e3e3;
   display: flex;
   flex-direction: column;
+  overflow: auto;
+
+  h1 {
+    border-top: 1px solid #e3e3e3;
+    display: flex;
+    align-items: center;
+
+    order: 1;
+    padding: 1rem;
+
+    img {
+      margin-right: 1rem;
+    }
+  }
+
+  nav {
+    flex: 1;
+  }
+}
+
+#content {
+  flex: 1;
+  padding: 1rem;
+  overflow: auto;
 }
