fix conflict with props name : type, change from type to color

--- a/extra/shared/components/flash/Flash.scss
+++ b/extra/shared/components/flash/Flash.scss
@@ -3,7 +3,7 @@
 
     @each $color in (primary, info, weak, warning, danger, success, info) {
 
-        &.alert--#{$color} {
+        &.alert-#{$color} {
             border-left: 4px solid var(--color-#{$color}-500);
         }
     }
