--- a/extra/shared/components/dialog/Dialog.scss
+++ b/extra/shared/components/dialog/Dialog.scss
@@ -114,6 +114,14 @@
         }
     }
 
+    &[class*="placement-left-start"] {
+        transform-origin: top right;
+    }
+
+    &[class*="placement-left-end"] {
+        transform-origin: bottom right;
+    }
+
     &[class*="placement\-right"] {
         border-right-width: 4px;
 
@@ -129,6 +137,14 @@
         &[data-status='close'] {
             transform-origin: center left;
         }
+    }
+
+    &[class*="placement-right-start"] {
+        transform-origin: top left;
+    }
+
+    &[class*="placement-right-end"] {
+        transform-origin: bottom left;
     }
 
     &.ll-select-dialog,
