--- a/packages/pentatrion-design/components/input/Input.scss
+++ b/packages/pentatrion-design/components/input/Input.scss
@@ -44,6 +44,7 @@
 
     .adornment {
         color: var(--color-weak-600);
+        position: relative;
     }
 
     .ll-button {
@@ -52,5 +53,13 @@
 
     .ll-loader {
         position: absolute;
+    }
+
+    .prefix .ll-loader {
+        left: 2px;
+    }
+
+    .suffix .ll-loader {
+        right: 2px;
     }
 }
