--- a/packages/pentatrion-design/styles/default.scss
+++ b/packages/pentatrion-design/styles/default.scss
@@ -5,4 +5,6 @@
 @import "themes/";
 @import "base/";
 
+@import "../components/style-only-components";
+
 @import "pentatrion-fonts/lonlat-fontello";
