--- a/packages/pentatrion-design/styles/themes/_light.scss
+++ b/packages/pentatrion-design/styles/themes/_light.scss
@@ -12,6 +12,8 @@
     --background-weak: #ebebeb;
     --background-strong: #e6e6e6;
 
+    --background-invert: var(--color-weak-1000);
+
     --border-default: #d1cfcd;
     --border-weak: #eae7e4;
 
