--- a/apps/storybook/.storybook/storybook.scss
+++ b/apps/storybook/.storybook/storybook.scss
@@ -1,3 +1,9 @@
+.storybook-gap {
+    display: grid;
+    gap: 2rem;
+    grid-template-columns: 1fr;
+}
+
 .storybook-grid-cols {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
