--- a/packages/pentatrion-fonts/lonlat-fontello.css
+++ b/packages/pentatrion-fonts/lonlat-fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('./dist/fontello/fontello.eot?45055821');
-  src: url('./dist/fontello/fontello.eot?45055821#iefix') format('embedded-opentype'),
-       url('./dist/fontello/fontello.woff2?45055821') format('woff2'),
-       url('./dist/fontello/fontello.woff?45055821') format('woff'),
-       url('./dist/fontello/fontello.ttf?45055821') format('truetype'),
-       url('./dist/fontello/fontello.svg?45055821#fontello') format('svg');
+  src: url('./dist/fontello/fontello.eot?42987035');
+  src: url('./dist/fontello/fontello.eot?42987035#iefix') format('embedded-opentype'),
+       url('./dist/fontello/fontello.woff2?42987035') format('woff2'),
+       url('./dist/fontello/fontello.woff?42987035') format('woff'),
+       url('./dist/fontello/fontello.ttf?42987035') format('truetype'),
+       url('./dist/fontello/fontello.svg?42987035#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('./fontello/fontello.svg?45055821#fontello') format('svg');
+    src: url('./dist/fontello/fontello.svg?42987035#fontello') format('svg');
   }
 }
 */
@@ -83,6 +83,7 @@
 .fe-circle-fill:before { content: '\e81a'; } /* '' */
 .fe-circle-stroke:before { content: '\e81b'; } /* '' */
 .fe-marker:before { content: '\e81c'; } /* '' */
+.fe-braille:before { content: '\e81d'; } /* '' */
 .fe-inactive:before { content: '\e81f'; } /* '' */
 .fe-star-half:before { content: '\f123'; } /* '' */
 .fe-history:before { content: '\f1da'; } /* '' */
