add autocomplete geoFeature management

--- a/packages/pentatrion-design/components/input/Input.scss
+++ b/packages/pentatrion-design/components/input/Input.scss
@@ -45,6 +45,14 @@
     .adornment {
         color: var(--color-weak-600);
         position: relative;
+
+        &>[class^="fe-"] {
+            margin: 0 .5rem;
+        }
+
+        svg {
+            pointer-events: none;
+        }
     }
 
     .ll-button {
