--- a/packages/pentatrion-fonts/lonlat-fontello.css
+++ b/packages/pentatrion-fonts/lonlat-fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('./dist/fontello/fontello.eot?42987035');
-  src: url('./dist/fontello/fontello.eot?42987035#iefix') format('embedded-opentype'),
-       url('./dist/fontello/fontello.woff2?42987035') format('woff2'),
-       url('./dist/fontello/fontello.woff?42987035') format('woff'),
-       url('./dist/fontello/fontello.ttf?42987035') format('truetype'),
-       url('./dist/fontello/fontello.svg?42987035#fontello') format('svg');
+  src: url('./dist/fontello/fontello.eot?53483683');
+  src: url('./dist/fontello/fontello.eot?53483683#iefix') format('embedded-opentype'),
+       url('./dist/fontello/fontello.woff2?53483683') format('woff2'),
+       url('./dist/fontello/fontello.woff?53483683') format('woff'),
+       url('./dist/fontello/fontello.ttf?53483683') format('truetype'),
+       url('./dist/fontello/fontello.svg?53483683#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('./dist/fontello/fontello.svg?42987035#fontello') format('svg');
+    src: url('./dist/fontello/fontello.svg?53483683#fontello') format('svg');
   }
 }
 */
@@ -66,16 +66,14 @@
 .fe-home:before { content: '\e809'; } /* '' */
 .fe-climbing-outdoor:before { content: '\e80a'; } /* '' */
 .fe-bivouac:before { content: '\e80b'; } /* '' */
-.fe-housenumber:before { content: '\e80c'; } /* '' */
+.fe-location:before { content: '\e80c'; } /* '' */
 .fe-hut:before { content: '\e80d'; } /* '' */
 .fe-lake:before { content: '\e80e'; } /* '' */
-.fe-municipality:before { content: '\e80f'; } /* '' */
 .fe-pass:before { content: '\e810'; } /* '' */
-.fe-road:before { content: '\e811'; } /* '' */
+.fe-housenumber:before { content: '\e811'; } /* '' */
 .fe-route:before { content: '\e812'; } /* '' */
-.fe-street:before { content: '\e813'; } /* '' */
+.fe-street-1:before { content: '\e813'; } /* '' */
 .fe-summit:before { content: '\e814'; } /* '' */
-.fe-town:before { content: '\e815'; } /* '' */
 .fe-angle-left:before { content: '\e816'; } /* '' */
 .fe-angle-right:before { content: '\e817'; } /* '' */
 .fe-circle-exclamation:before { content: '\e818'; } /* '' */
@@ -84,6 +82,9 @@
 .fe-circle-stroke:before { content: '\e81b'; } /* '' */
 .fe-marker:before { content: '\e81c'; } /* '' */
 .fe-braille:before { content: '\e81d'; } /* '' */
+.fe-locality:before { content: '\e81e'; } /* '' */
 .fe-inactive:before { content: '\e81f'; } /* '' */
+.fe-municipality:before { content: '\e820'; } /* '' */
+.fe-street:before { content: '\e821'; } /* '' */
 .fe-star-half:before { content: '\f123'; } /* '' */
 .fe-history:before { content: '\f1da'; } /* '' */
